fix srcoll jumping when error ui is shown

--- a/src/client/assets/styles/blocks/search-results.scss
+++ b/src/client/assets/styles/blocks/search-results.scss
@@ -5,7 +5,7 @@
 
   & > p {
     margin-top: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
   }
 
   & > button {
